# kedro-testing

./: README.md  pyproject.toml
new-kedro-project/: README.md  pyproject.toml  requirements.txt
new-kedro-project/src/new_kedro_project/: pipeline_registry.py  settings.py
new-kedro-project/tests/pipelines/data_science/: test_pipeline.py
