[tool.poetry]
name = "kedro-testing"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kedro = "^0.19.11"
kedro-viz = "^10.2.0"
pyspark = "^3.5.5"
kedro-datasets = "^6.0.0"
hdfs = "^2.7.3"
s3fs = "^2025.3.0"
matplotlib = "^3.10.1"
scikit-learn = "^1.6.1"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
pyarrow = "^19.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
